Modify index page style

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,6 @@
     <title>First Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <script src="js/scripts/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="js/home_page.js" type="text/javascript"></script>
     <link href="css/style.css" type="text/css" rel="stylesheet">
@@ -94,32 +93,34 @@
                 <ul class="left-left">
                     <li><i class="fa fa-file-text" aria-hidden="true"></i></li>
                     <li><i class="fa fa-refresh" aria-hidden="true"></i></li>
-                    <li><i class="fa fa-file-text" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
 
                 </ul>
                 <ul class="left-right">
                     <li>
                         <ul>
                             <span class="span">Quick</span>
-                            <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro quisquam
-                    est
-                </div>
+                            <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porroqu
+                                is quam est
+                            </div>
                         </ul>
                     </li>
                     <li>
                         <ul>
-                            <span class="span">Quick</span>
-                            <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro quisquam
-                    est
-                </div>
+                            <span class="span">Easy</span>
+                            <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
+                                quisquam
+                                est
+                            </div>
                         </ul>
                     </li>
                     <li>
                         <ul>
-                            <span class="span">Quick</span>
-                            <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro quisquam
-                    est
-                </div>
+                            <span class="span">Comprehensive</span>
+                            <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
+                                quisquam
+                                est
+                            </div>
                         </ul>
                     </li>
                 </ul>
@@ -132,21 +133,28 @@
 
                 </ul>
                 <ul class="right-right">
-                    <ul>
-                        <span class="span">Free</span>
-                        <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro quisquam
-                    </ul>
+                    <li>
+                        <ul>
+                            <span class="span">Free</span>
+                            <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
+                                quisquam
+                            </div>
+                        </ul>
                     </li>
                     <li>
                         <ul>
                             <span class="span">Independent</span>
-                            <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro quisquam
+                            <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
+                                quisquam
+                            </div>
                         </ul>
                     </li>
                     <li>
                         <ul>
                             <span class="span">Awesome</span>
-                            <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro quisquam
+                            <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
+                                quisquam
+                            </div>
                         </ul>
                     </li>
                 </ul>
@@ -159,13 +167,14 @@
             <button class="tabs-left">Testimonlals</button>
             <button class="tabs-right">Recent Feedbacks</button>
         </div>
-        <div class="footer-describe">dfffffffffffff</div>
+        <div class="footer-describe">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
+            quisquam</div>
         <div class="footer-name">John Mayer</div>
         <div class="footer-position">Halcyon,CEO</div>
         <div class="footer-portrait">
-            <div class="portrait"><img src="./images/portrait.png" alt=""></div>
-            <div class="portrait"><img src="./images/portrait.png" alt=""></div>
-            <div class="portrait"><img src="./images/portrait.png" alt=""></div>
+            <div class="portrait-one"><img src="./images/portrait.png" alt=""></div>
+            <div class="portrait-two"><img src="./images/portrait.png" alt=""></div>
+            <div class="portrait-three"><img src="./images/portrait.png" alt=""></div>
         </div>
     </div>
     <div class="page-bottom">
@@ -179,16 +188,16 @@
         <div class="bottom-nav">
             <ul class="nav-items">
                 <li class="item">Blog</li>
-                <li class="item">Blog</li>
-                <li class="item">Blog</li>
-                <li class="item">Blog</li>
-                <li class="item">Blog</li>
-                <li class="item">Blog</li>
+                <li class="item">Contact Us</li>
+                <li class="item">About Us</li>
+                <li class="item">FAQs</li>
+                <li class="item">Privacy</li>
+                <li class="item">Disclaimer</li>
 
             </ul>
-            <ul class="nav-items">
-                <i class="fa fa-camera-retro"></i>
-                <i>1</i>
+            <ul class="nav-icons">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
             </ul>
         </div>
     </div>
