Refactor static files place

--- a/src/main/webapp/demo.html
+++ b/src/main/webapp/demo.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="./css/demo.css" type="text/css" rel="stylesheet"></link>
+    <link href="css/demo.css" type="text/css" rel="stylesheet"/>
     <title>Demo</title>
 </head>
 <body>
@@ -14,8 +13,6 @@
         <span>25%</span>
     </div>
 </div>
-
-<h1 th:text="${age}"></h1>
-
+<h1 text="${age}"></h1>
 </body>
 </html>
