--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -54,8 +54,8 @@
 
     <section>
         <div class="content">
-            <h4 class="content-describe">HOW IT WORKS</h4>
-            <div class="content-line">
+            <h4>HOW IT WORKS</h4>
+            <div line="content-line">
                 <h4 class="line">1</h4>
                 <h4 class="line">2</h4>
                 <h4 class="line">3</h4>
