Refactor home.html ul style

--- a/src/main/webapp/demo.html
+++ b/src/main/webapp/demo.html
@@ -13,6 +13,10 @@
         <span>25%</span>
     </div>
 </div>
+<section>
+    <div class="line">1</div>
+</section>
+
 <h1 text="${age}"></h1>
 </body>
 </html>
