--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -52,126 +52,95 @@
         </div>
     </section>
 
-    <section>
-        <div class="content">
-            <h4>HOW IT WORKS</h4>
-            <div line="content-line">
-                <h4 class="line">1</h4>
-                <h4 class="line">2</h4>
-                <h4 class="line">3</h4>
-            </div>
-            <div class="content-items">
-                <ul class="items">
-                    <li class="content-icon"><span tabindex="1" class="icon"><i class="fa fa-address-card"
-                                                                                aria-hidden="true"></i></span></li>
-                    <li class="content-title"><h3>Compare</h3></li>
-                    <li class="content-content">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
-                        quisquam
-                        est
-                    </li>
-                </ul>
-                <ul class="items">
-                    <li class="content-icon"><i class="fa fa-pencil" aria-hidden="true"></i></li>
-                    <li class="content-title"><h3>Receive Proposals</h3></li>
-                    <li class="content-content">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
-                        quisquam
-                        est
-                    </li>
-                </ul>
-                <ul class="items">
-                    <li class="content-icon"><i class="fa fa-users" aria-hidden="true"></i></li>
-                    <li class="content-title"><h3>Sell with the Best</h3></li>
-                    <li class="content-content">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
-                        quisquam
-                        est
-                    </li>
-                </ul>
-            </div>
-            <div class="line"></div>
+    <section class="content">
+        <h3 class="section_title">HOW IT WORKS</h3>
+        <div class="content-line">
+            <h4 class="line">1</h4>
+            <h4 class="line">2</h4>
+            <h4>3</h4>
+        </div>
+        <div class="content-items">
+            <ul class="items">
+                <li class="content-icon"><span tabindex="1" class="icon"><i class="fa fa-address-card"
+                                                                            aria-hidden="true"></i></span></li>
+                <li class="content-title"><h3>Compare</h3></li>
+                <li class="content-content">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
+                    quisquam
+                    est
+                </li>
+            </ul>
+            <ul class="items">
+                <li class="content-icon"><i class="fa fa-pencil" aria-hidden="true"></i></li>
+                <li class="content-title"><h3>Receive Proposals</h3></li>
+                <li class="content-content">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
+                    quisquam
+                    est
+                </li>
+            </ul>
+            <ul class="items">
+                <li class="content-icon"><i class="fa fa-users" aria-hidden="true"></i></li>
+                <li class="content-title"><h3>Sell with the Best</h3></li>
+                <li class="content-content">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
+                    quisquam
+                    est
+                </li>
+            </ul>
         </div>
     </section>
     <section>
         <div class="us">
-            <h3 class="us-header">WHY CHOOSE US</h3>
-            <div class="us-content">
-                <div class="content-left">
-                    <ul class="left-left">
-                        <li><i class="fa fa-file-text" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-refresh" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-
-                    </ul>
-                    <ul class="left-right">
-                        <li>
-                            <ul>
-                                <span class="span">Quick</span>
-                                <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque
-                                    porroqu
-                                    is quam est
-                                </div>
-                            </ul>
-                        </li>
-                        <li>
-                            <ul>
-                                <span class="span">Easy</span>
-                                <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque
-                                    porro
-                                    quisquam
-                                    est
-                                </div>
-                            </ul>
-                        </li>
-                        <li>
-                            <ul>
-                                <span class="span">Comprehensive</span>
-                                <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque
-                                    porro
-                                    quisquam
-                                    est
-                                </div>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <div class="content-right">
-                    <ul class="right-left">
-                        <li><i class="fa fa-tag" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-user" aria-hidden="true"></i></li>
-                        <li><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></li>
-
-                    </ul>
-                    <ul class="right-right">
-                        <li>
-                            <ul>
-                                <span class="span">Free</span>
-                                <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque
-                                    porro
-                                    quisquam
-                                </div>
-                            </ul>
-                        </li>
-                        <li>
-                            <ul>
-                                <span class="span">Independent</span>
-                                <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque
-                                    porro
-                                    quisquam
-                                </div>
-                            </ul>
-                        </li>
-                        <li>
-                            <ul>
-                                <span class="span">Awesome</span>
-                                <div class="span-text">Magni doleres eos qui ratione voluptatem sequi nesciunt neque
-                                    porro
-                                    quisquam
-                                </div>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="line"></div>
+            <h3 class="section_title">WHY CHOOSE US</h3>
+            <ul class="us-list">
+                <li>
+                    <i class="fa fa-tag"></i>
+                    <h4>Quick</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime voluptate deleniti sapiente
+                        illum fugiat? Cum assumenda aut voluptates repellat esse dolores est corporis quod, sit
+                        necessitatibus molestiae, quia eum et.</p>
+                </li>
+                <li>
+                    <i class="fa fa-refresh"></i>
+                    <h4>Free</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, nulla accusantium, deleniti
+                        veritatis quo sed commodi obcaecati laborum soluta nemo deserunt aut cumque doloribus eum
+                        saepe
+                        porro rerum nobis repudiandae.</p>
+                </li>
+                <li>
+                    <i class="fa fa-pencil"></i>
+                    <h4>Easy</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus nobis eligendi architecto
+                        quibusdam dolor. Quae ducimus nobis cumque perferendis velit reiciendis quasi dolore, ea
+                        iure
+                        ipsa itaque culpa voluptatibus laborum.</p>
+                </li>
+                <li>
+                    <i class="fa fa-user"></i>
+                    <h4>Quick</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, optio? A eius magnam
+                        beatae
+                        officiis. Explicabo facere consequuntur earum, ut similique! Explicabo optio voluptatem
+                        animi
+                        laudantium nam pariatur soluta id.</p>
+                </li>
+                <li>
+                    <i class="fa fa-clipboard"></i>
+                    <h4>Quick</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, distinctio esse, at ab
+                        provident,
+                        sapiente fugit minus accusamus totam voluptate temporibus maxime nobis commodi quisquam
+                        suscipit
+                        veniam molestias laboriosam quam?</p>
+                </li>
+                <li>
+                    <i class="fa fa-thumbs-up"></i>
+                    <h4>Quick</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, voluptatibus eveniet
+                        ipsam
+                        cum ducimus dolorum hic accusamus molestiae, magni velit corporis corrupti sed quisquam
+                        exercitationem quis fugiat obcaecati. Voluptatum, aliquid!</p>
+                </li>
+                <div class="line"></div>
         </div>
     </section>
     <section>
