Refactor home icon style

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -53,34 +53,34 @@
     </section>
 
     <section class="content">
-        <h3 class="section_title">HOW IT WORKS</h3>
-        <div class="content-line">
+        <h3 class="content_title">HOW IT WORKS</h3>
+        <div class="content_line">
             <h4 class="line">1</h4>
             <h4 class="line">2</h4>
             <h4>3</h4>
         </div>
-        <div class="content-items">
+        <div class="content_items">
             <ul class="items">
-                <li class="content-icon"><span tabindex="1" class="icon"><i class="fa fa-address-card"
+                <li class="content_icon"><span tabindex="1" class="icon"><i class="fa fa-address-card"
                                                                             aria-hidden="true"></i></span></li>
-                <li class="content-title"><h3>Compare</h3></li>
-                <li class="content-content">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
+                <li><h3>Compare</h3></li>
+                <li>Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
                     quisquam
                     est
                 </li>
             </ul>
             <ul class="items">
-                <li class="content-icon"><i class="fa fa-pencil" aria-hidden="true"></i></li>
-                <li class="content-title"><h3>Receive Proposals</h3></li>
-                <li class="content-content">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
+                <li class="content_icon"><i class="fa fa-pencil" aria-hidden="true"></i></li>
+                <li><h3>Receive Proposals</h3></li>
+                <li>Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
                     quisquam
                     est
                 </li>
             </ul>
             <ul class="items">
-                <li class="content-icon"><i class="fa fa-users" aria-hidden="true"></i></li>
-                <li class="content-title"><h3>Sell with the Best</h3></li>
-                <li class="content-content">Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
+                <li class="content_icon"><i class="fa fa-users" aria-hidden="true"></i></li>
+                <li><h3>Sell with the Best</h3></li>
+                <li>Magni doleres eos qui ratione voluptatem sequi nesciunt neque porro
                     quisquam
                     est
                 </li>
@@ -171,7 +171,7 @@
                 </div>
             </div>
             <div class="link_nav">
-                <ul class="nav-items">
+                <ul class="nav_items">
                     <li class="item">Blog</li>
                     <li class="item">Contact Us</li>
                     <li class="item">About Us</li>
@@ -180,7 +180,7 @@
                     <li class="item">Disclaimer</li>
 
                 </ul>
-                <ul class="nav-icons">
+                <ul class="nav_icons">
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                     <i class="fa fa-facebook" aria-hidden="true"></i>
                 </ul>
