--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -5,29 +5,203 @@
     <title>Twitter</title>
 </head>
 <body>
-<div class="chat-header">
-    <nav>
-        <ul class="header-left">
-            <li><i class="fa fa-address-card" aria-hidden="true"></i></li>
-            <li><i class="fa fa-address-card" aria-hidden="true"></i></li>
+<header>
+    <div class="header">
+        <ul class="header_message">
+            <li><i class="fa fa-leaf" aria-hidden="true"></i></li>
+            <li><i class="fa fa-pencil" aria-hidden="true"></i></li>
             <li><i class="fa fa-address-card" aria-hidden="true"></i></li>
             <li><i class="fa fa-address-card" aria-hidden="true"></i></li>
         </ul>
-    </nav>
-    <div class="header-middle">
-        <i class="fa fa-address-card" aria-hidden="true"></i>
-    </div>
-    <div class="header-right">
-        <div class="header-search">
-            <input th:type="text"></input>
-            <i class="fa fa-search" aria-hidden="true"></i>
+        <div class="header_link">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+        </div>
+        <div class="header_search">
+            <div class="search_input">
+                <input type="text" placeholder="Search">
+                <i class="fa fa-search" aria-hidden="true"></i>
+            </div>
+            <img class="portrait-little" src="./images/portrait.png" alt="">
         </div>
     </div>
-</div>
-<div class="chat-body">
-    <div class="body-left"></div>
-    <div class="body-middle"></div>
-    <div class="body-right"></div>
+</header>
+
+<div class="content">
+    <section>
+        <div class="content-leftSide">
+            <div class="leftSide-contacts">
+
+            </div>
+            <div class="leftSide-description">
+                <div class="description-basic">
+                    <img class="portrait-big" src="./images/portrait.png" alt="">
+                    <p class="basic_name">Kerem Suer</p>
+                    <p>The World's most comprehensive professionally edited abbreviations and acronyms database
+                        All trademarks/service marks referenced on this site are properties of their respective
+                        owners.</p>
+                    <div class="basic_link">
+                        <i class="fa fa-twitter">www.kerem.co</i>
+                    </div>
+                    <button class="basic_btn">Follow</button>
+                </div>
+            </div>
+            <div class="description-activites">
+                <h3>ACTIVITIES</h3>
+                <ul>
+                    <li><i class="fa fa-user"></i>Follower<a href="#">Eddie</a></li>
+                    <li><i class="fa fa-user"></i>Follower<a href="#">Eddie</a></li>
+                    <li><i class="fa fa-user"></i>Follower<a href="#">Eddie</a></li>
+                    <li><i class="fa fa-user"></i>Follower<a href="#">Eddie</a></li>
+                    <li><i class="fa fa-user"></i>Follower<a href="#">Eddie</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="content-main">
+            <div class="main-nav">
+                <ul>
+                    <li>
+                        <p>TWEETS</p>
+                        <span>200</span>
+                    </li>
+                    <li>
+                        <p>TWEETS</p>
+                        <span>200</span>
+
+                    </li>
+                    <li>
+                        <p>TWEETS</p>
+                        <span>200</span>
+                    </li>
+                    <li>
+                        <p>TWEETS</p>
+                        <span>1M</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="main-info">
+                <img class="portrait-little" src="./images/portrait.png" alt="">
+                <div class="info">
+                    <p><span>Kerem</span> @kerem.com</p>
+                    <p>The World's most comprehensive professionally edited abbreviations and acronyms database
+                        All trademarks/service marks referenced on this site are properties of their respective
+                        owners The World's most comprehensive professionally edited abbreviations and acronyms database
+                        All trademarks/service marks referenced on this site are properties of their respective
+                        owners.</p>
+                    <div class="info-icon">
+                        <i class="fa fa-user"></i>
+                        <i class="fa fa-user"></i>
+                        <i class="fa fa-user">20</i>
+                        <p>...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="main-info">
+                <img class="portrait-little" src="./images/portrait.png" alt="">
+                <div class="info">
+                    <p><span>Kerem</span> @kerem.com</p>
+                    <p>The World's most comprehensive professionally edited abbreviations and acronyms database
+                        All trademarks/service marks referenced on this site are properties of their respective
+                        owners The World's most comprehensive professionally edited abbreviations and acronyms database
+                        All trademarks/service marks referenced on this site are properties of their respective
+                        owners.</p>
+                    <div class="info-icon">
+                        <i class="fa fa-user"></i>
+                        <i class="fa fa-user"></i>
+                        <i class="fa fa-user">20</i>
+                        <p>...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="main-info">
+                <img class="portrait-little" src="./images/portrait.png" alt="">
+                <div class="info">
+                    <p><span>Kerem</span> @kerem.com</p>
+                    <embed src="http://player.youku.com/player.php/sid/XMzI2NTc4NTMy/v.swf" width="480" height="400" type="application/x-shockwave-flash"> </embed>
+                    <div class="info-icon">
+                        <i class="fa fa-user"></i>
+                        <i class="fa fa-user"></i>
+                        <i class="fa fa-user">20</i>
+                        <p>...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="main-info">
+                <img class="portrait-little" src="./images/portrait.png" alt="">
+                <div class="info">
+                    <p><span>Kerem</span> @kerem.com</p>
+                    <p>The World's most comprehensive professionally edited abbreviations and acronyms database
+                        All trademarks/service marks referenced on this site are properties of their respective
+                        ownersThe World's most comprehensive professionally edited abbreviations and acronyms database
+                        All trademarks/service marks referenced on this site are properties of their respective
+                        owners.</p>
+                    <div class="info-icon">
+                        <i class="fa fa-user"></i>
+                        <i class="fa fa-user"></i>
+                        <i class="fa fa-user">20</i>
+                        <p>...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="content-rightSide">
+            <div class="rightSide-follows">
+                <ul>
+                    <li>
+                        <span>WHO TO FOLLOW</span>
+                        <div class="follow_introduce">
+                            <h3>More</h3>
+                        </div>
+                    </li>
+                    <li>
+                        <img class="portrait-little" src="./images/portrait.png" alt="">
+                        <div class="follow_introduce">
+                            <p>Chris Soooner</p>
+                            <span>Designer,Blogger</span>
+                        </div>
+                        <a>+</a>
+                    </li>
+                    <li>
+                        <img class="portrait-little" src="./images/portrait.png" alt="">
+                        <div class="follow_introduce">
+                            <p>Chris Soooner</p>
+                            <span>Designer,Blogger</span>
+                        </div>
+                        <a>+</a>
+                    </li>
+                    <li>
+                        <img class="portrait-little" src="./images/portrait.png" alt="">
+                        <div class="follow_introduce">
+                            <p>Chris Soooner</p>
+                            <span>Designer,Blogger</span>
+                        </div>
+                        <a>+</a>
+                    </li>
+                    <li>
+                        <img class="portrait-little" src="./images/portrait.png" alt="">
+                        <div class="follow_introduce">
+                            <p>Chris Soooner</p>
+                            <span>Designer,Blogger</span>
+                        </div>
+                        <a>+</a>
+                    </li>
+                    <li>
+                        <img class="portrait-little" src="./images/portrait.png" alt="">
+                        <div class="follow_introduce">
+                            <p>Chris Soooner</p>
+                            <span>Designer,Blogger</span>
+                        </div>
+                        <a>+</a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+    </section>
 </div>
 <script src="https://use.fontawesome.com/6b2fbe46f2.js"></script>
 </body>
